--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,21 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700&display=swap");
+
+$Mobile: 375px;
+$Desktop: 1440px;
+
+$White: hsl(0, 0%, 100%);
+$LightPink: hsl(275, 100%, 97%);
+$GrayishPurple: hsl(292, 16%, 49%);
+$DarkPurple: hsl(292, 42%, 14%);
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  font-optical-sizing: auto;
+  font-family: "Work Sans", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 16px;
+}
