--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,19 @@
-<article>
+<article class="container">
   <header class="header-container">
-    <img src="./assets/images/icon-star.svg" alt="Star icon image" />
+    <img
+      class="img"
+      src="./assets/images/icon-star.svg"
+      alt="Star icon image"
+    />
     <h1 class="title">FAQs</h1>
   </header>
   <main class="accordions-container">
-    <details class="accordion-1">
+    <details class="accordion">
       <summary class="question">
         What is Frontend Mentor, and how will it help me?
+        <div class="icon"></div>
       </summary>
+
       <p class="text">
         Frontend Mentor offers realistic coding challenges to help developers
         imporve their frontend coding skills with projects in HTML, CSS, AND
@@ -15,7 +21,7 @@
         building
       </p>
     </details>
-    <details class="accordion-2">
+    <details class="accordion">
       <summary class="question">Is Frontend Mentor free?</summary>
       <p class="text">
         Yes, Frontend Mentor offers both free and paid plans. The free plan
@@ -25,7 +31,7 @@
         practice building real-world projects.
       </p>
     </details>
-    <details class="accordion-3">
+    <details class="accordion">
       <summary class="question">
         Can I use Frontend Mentor project in my portfolio?
       </summary>
@@ -38,7 +44,7 @@
         the GitHub repository in your portfolio.
       </p>
     </details>
-    <details class="accordion-4">
+    <details class="accordion">
       <summary class="question">
         How can I get help if I'm stuck on a challenge?
       </summary>
