--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,4 +18,11 @@ body {
   font-weight: 400;
   font-style: normal;
   font-size: 16px;
+  background-color: $LightPink;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
