FEAT enhance accordion functionality with icons and styling updates

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,18 +11,29 @@
     <details class="accordion">
       <summary class="question">
         What is Frontend Mentor, and how will it help me?
-        <div class="icon"></div>
+        <img
+          class="icon"
+          src="./assets/images/icon-plus.svg"
+          alt="Plus and Minus Accordion Icon"
+        />
       </summary>
-
       <p class="text">
         Frontend Mentor offers realistic coding challenges to help developers
-        imporve their frontend coding skills with projects in HTML, CSS, AND
+        imporve their frontend coding skills with projects in HTML, CSS, and
         JavaScript. It's suitable for all levels and ideal for portfolio
-        building
+        building.
       </p>
     </details>
+    <hr class="line" />
     <details class="accordion">
-      <summary class="question">Is Frontend Mentor free?</summary>
+      <summary class="question">
+        Is Frontend Mentor free?
+        <img
+          class="icon"
+          src="./assets/images/icon-plus.svg"
+          alt="Plus and Minus Accordion Icon"
+        />
+      </summary>
       <p class="text">
         Yes, Frontend Mentor offers both free and paid plans. The free plan
         gives you access to a selection of challenges, but the Pro plan unlocks
@@ -31,9 +42,15 @@
         practice building real-world projects.
       </p>
     </details>
+    <hr class="line" />
     <details class="accordion">
       <summary class="question">
         Can I use Frontend Mentor project in my portfolio?
+        <img
+          class="icon"
+          src="./assets/images/icon-plus.svg"
+          alt="Plus and Minus Accordion Icon"
+        />
       </summary>
       <p class="text">
         Yes! You can absolutely use Frontend Mentor projects in your portfolio.
@@ -44,9 +61,15 @@
         the GitHub repository in your portfolio.
       </p>
     </details>
+    <hr class="line" />
     <details class="accordion">
       <summary class="question">
         How can I get help if I'm stuck on a challenge?
+        <img
+          class="icon"
+          src="./assets/images/icon-plus.svg"
+          alt="Plus and Minus Accordion Icon"
+        />
       </summary>
       <p class="text">
         If you're stuck on a Frontend Mentor challenge, here are some ways to
