--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,4 +25,5 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-image: url("../public/assets/images/background-pattern-mobile.svg");
 }
