STYLE update layout with max-width for app component and enhance background responsiveness

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,6 +5,8 @@
   margin: 0 1.5rem;
   border-radius: 5px;
   padding: 1.5rem;
+  max-width: 33rem;
+
   .header-container {
     display: flex;
     align-items: center;
