--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@ $Desktop: 1440px;
 $White: hsl(0, 0%, 100%);
 $LightPink: hsl(275, 100%, 97%);
 $GrayishPurple: hsl(292, 16%, 49%);
+$ElectricPurple: hsl(273, 98%, 60%);
 $DarkPurple: hsl(292, 42%, 14%);
 
 html,
