--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,7 @@
 .container {
   background-color: s.$White;
   margin: 0 1.5rem;
-  border-radius: 5px;
+  border-radius: 10px;
   padding: 1.5rem;
   max-width: 33rem;
 
@@ -16,6 +16,7 @@
     }
     .title {
       margin: 0;
+      font-size: 3rem;
       font-weight: 700;
       color: s.$DarkPurple;
     }
