--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,7 +6,7 @@
   border-radius: 10px;
   padding: 1.5rem;
   max-width: 33rem;
-
+  box-shadow: 0 15px 20px rgba($color: s.$DarkPurple, $alpha: 0.1);
   .header-container {
     display: flex;
     align-items: center;
