STYLE set default state of accordion to open for improved user experience

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     <h1 class="title">FAQs</h1>
   </header>
   <main class="accordions-container">
-    <details class="accordion">
+    <details class="accordion" open>
       <summary class="question">
         What is Frontend Mentor, and how will it help me?
         <img
